# gitlab-sonar-scanner-with-quality-gate

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  codecov.yml
.github/: git_convention.md
.github/ISSUE_TEMPLATE/: test.md
.github/workflows/: grcov.yml  push_and_pr.yml  release.yml  security.yml
docker-image/: Dockerfile
gitlab-sonar-scanner-docker/: Dockerfile
scanner-cli/: Dockerfile
sonar-cli/: .gitignore
sonar-cli/src/: lib.rs
sonar-cli/src/domain/gitlab/: mod.rs
sonar-cli/src/domain/sonar/: project_status.rs
sonar-cli/src/infra/gitlab_client/: mod.rs
sonar-cli/src/infra/sonar_analysis_params/: mod.rs
sonar-cli/src/infra/sonar_client/: mod.rs
src/: lib.rs  main.rs
src/domain/: mod.rs  sonar.rs
src/domain/gitlab/: merge_requests.rs  note.rs
src/domain/sonar/: condition.rs  mod.rs  period.rs  project_status.rs  task.rs
src/infra/: mod.rs
src/infra/api_call/: mod.rs  remote_api_call.rs
src/infra/api_call_remote/: mod.rs
src/infra/gitlab_client/: mod.rs
src/infra/sonar_analysis_params/: read_scanner_work.rs
src/infra/sonar_client/: mod.rs
src/tests/: test-report-tasks.txt
