[package]
name = "sonar_qg"
version = "0.1.0"
authors = ["Damien Cuenot <damien.cuenot@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dotenv_codegen = "0.15"
Inflector = "0.5"
reqwest = { version = "0.10", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
tokio = { version = "0.2", features = ["full"] }

[dev-dependencies]
proptest = "0.9"