[package]
name = "sonar_qg"
version = "1.0.0"
authors = ["Damien Cuenot <damien.cuenot@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.12"
Inflector = "0.5"
log = "0.4"
reqwest = { version = "0.10", features = ["json", "blocking"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
simplelog = "0.8"
structopt = "0.3"
retry = "1.0.0"
tokio = { version = "0.2", features = ["full"] }

[dev-dependencies]
proptest = "0.9"